--- a/anime.css
+++ b/anime.css
@@ -22,13 +22,18 @@ section{
   background-color: #f0eef4;
 }
 
-.title{
+/* .title{
   font-size:120px ;
   margin-bottom: 12px;
   text-align: left;
   line-height: 1;
-}
-
+} */
+.title{
+    font-size:60px ;
+    margin-bottom: 12px;
+    text-align: center;
+    line-height: 1;
+  }
 
 p{
   line-height: 1.5;
@@ -256,7 +261,9 @@ nav {
     color: #bd72b8;
     animation: fade-in 4500ms;
    }
-
+   .highlight__no--fade{
+    color: #bd72b8;
+   }
    .finder__input{
     background-color: #fff;
     border-radius: 20px;
@@ -314,93 +321,95 @@ background-color: #e5aee1;
 
 
 
-   /* chibis */
-
-   .mov__container{
-
-    justify-content: space-evenly;
-    padding: 10px;
-    padding-top: 10px;
-    max-width: 100%;
-    display: flex;
+   /* movies */
 
 
-   }
 
-   .mov__inner{
-    width: 50%;
-    justify-content: space-evenly;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-
-   }
-   .mov__pic--holder{
-    padding: 2px;
-   }
-   .mov__pic{
-    height: 16rem ;
-    width: 11.5rem;
-    animation: chibi__float 3000ms infinite ease-in-out ;
-    margin:  15px 10px ;
-}
-
-   .mov__pic2{
-    height: 16rem ;
-    width: 11rem;
-    animation: chibi__float  2550ms infinite ease-in-out ;
-    margin:  15px 10px ;
-
-   }
-
-   .luffy__pic{
-    height: 16rem;
-    width: 11rem;
-    animation: chibi__float 3150ms infinite ease-in-out ;
-    margin:  15px 10px ;
-
-   }
-
-   .gotg__pic{
-    height: 16rem ;
-    width: 11.5rem;
-    animation: chibi__float  2550ms infinite ease-in-out ;
-    margin:  15px 10px ;
-
-}
-
-   .fast__pic{
-    height: 16rem ;
-    width: 11rem;
-    animation: chibi__float 4000ms infinite ease-in-out ;
-    margin:  15px 10px ;
-
-   }
-
-   .transformers__pic{
-    height: 16rem;
-    width: 11rem;
-    animation: chibi__float 3000ms infinite ease-in-out ;
-    margin:  15px 10px ;
-   }
-
-   .post{
-    border: 4px solid #242424;
-    background-color: #dacbd9;
-    margin: 20px;
-    text-align: center;
-    font-weight: 500;
-    margin: 8px;
-    font-size: 14px;
-
-   }
-    .post__title{
-        font-size: 13px;
-        padding: 0 5px;
-    }
    
+    .movie {
+        width: 33%;
+        padding: 24px;
+        flex-direction: row;
+        margin: 4PX;
+   
+    }
     
+
+    .movie__container{
+        justify-content: space-evenly;
+        display: flex;
+        flex-wrap: wrap;
+        /* flex-direction: row; */
+    }
+
+
+    .movie__cover--wrapper {
+        margin: 20px;
+        border-radius: 4px;
+        overflow: hidden;
+        display: flex;
+        transition: all 300ms ease;
+        height: 18rem;
+        width: 13rem;
+    }
+
+    .movie__cover{
+        margin: 10px;
+    }
+    
+    .movie__cover--wrapper:hover {
+        box-shadow: 0 8px 60px 0 rgba(185, 135, 186, 0.45);
+        transform: scale(1.02);
+    }
+    
+    .movie__title {
+        font-size: 20px;
+        color: #242424;
+        text-align: center;
+        margin-bottom: 8px;
+    }
+    
+    .movie__year {
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+        color: #242424;
+    }
+    
+    .movie__results {
+        padding-top: 20px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+      /* loading  */
+
+
+    
+    .movies__loading {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 80px;
+        position: absolute;
+        color: #bd72b8;
+        left: 0;
+        right: 0;
+    }
+    
+    .movies__loading--spinner {
+        display: none !important;
+    }
+    
+    .movies__loading .movies__loading--spinner {
+        display: block !important;
+    }
+    
+    .fa-spinner {
+        animation: spinner 750ms infinite linear;
+    }
+
+
 /* animatoins */
 
 
@@ -459,37 +468,6 @@ background-color: #e5aee1;
     }
   }
 
-  @keyframes chibi__float {
-    0% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(-12px);
-    }
-    100% {
-        transform: translateY(0px);
-    }
-  }
-
-  
-  @keyframes random_color{
-
-        30% {     
-          color: rgb(247, 115, 137);   
-        }   
-        45% {     
-          color: rgb(239, 239, 108);   
-        } 
-        65% {     
-            color: rgb(92, 170, 123);   
-          } 
-        85% {
-          color: rgb(76, 76, 255);
-         }
-           100%{
-            color: white;   
-           }
-  }
 
   @keyframes spinner{
     0% {
@@ -502,22 +480,32 @@ background-color: #e5aee1;
 
 
 
-  
- .modal__overlay--loading {
-    font-size: 80px;
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-color: #242424;    
- }
-  .invis {
-    opacity: 0; 
-  }
 
-  .fa-spinner{
-    animation: spinner 750ms infinite linear;}
+
+
+
+      /* small and large phones add to later, hamburg menu and shrinnk logo */
+      @media (max-width: 550px) {
+        .nav__container{
+            padding: 0 8px;
+        }
+        
+        h1{
+            font-size: 32px;
+            text-align: center;
+            margin-bottom: 20px;
+            padding: 0 4px;
+        }
     
-    .modal__overlay--visible {
-        z-index: 1;
-        display: flex;
-      }
+        .input__wrap{
+            max-width: 360px;
+        }
+    
+        .movie{
+            width: 50%;
+        }
+    
+        .results__wrapper {
+            flex-direction: column;
+        }
+    }
